# keylime

./: Cargo.toml  README.md  build.rs  config.toml  default_dark.toml  default_light.toml  keylime.exe.manifest  loop.py
config/: config.json
config/keymaps/: macos.json  windows.json
config/languages/: c.json  c.toml  cpp.json  csharp.json  csharp.toml  css.json  go.json  html.json  html.toml  javascript.json  javascript.toml  json.json  lua.json  markdown.json  odin.json  python.json  python.toml  rust.json  rust.toml  toml.json  toml.toml
config/themes/: darktooth.json  darktooth.toml  default_dark.toml  default_light.json  default_light.toml  gruvbox_dark.json  gruvbox_dark.toml  haven.json  one_light.json  one_light.toml
extra/: Info.plist  keylime.exe.manifest
languages/: c.toml  csharp.toml  html.toml  javascript.toml  python.toml  rust.toml  toml.toml
src/: action_history.rs  app.rs  bit_field.rs  camera.rs  command_palette.rs  config.rs  ctx.rs  cursor.rs  cursor_index.rs  deferred_call.rs  dialog.rs  digits.rs  doc.rs  editor.rs  editor_buffers.rs  file_tree.rs  geometry.rs  gfx.rs  input.rs  input_handlers.rs  key.rs  keybind.rs  line_pool.rs  lsp.rs  main.rs  matrix.rs  mouse_button.rs  mouse_scroll.rs  mousebind.rs  normalizable.rs  platform.rs  pool.rs  position.rs  rect.rs  selection.rs  side.rs  syntax_highlighter.rs  tab.rs  temp_buffer.rs  tests.rs  (+6 more)
src/command_palette/: file_mode.rs  go_to_line_mode.rs  mod.rs  mode.rs  search_mode.rs
src/config/: language.rs  pair_visitor.rs  theme.rs
src/geometry/: easing.rs  position.rs  quad.rs  rect.rs  sides.rs  visual_position.rs
src/input/: action.rs  editing_actions.rs  input_handlers.rs  key.rs  keybind.rs  mods.rs  mouse_scroll.rs  mousebind.rs  tests.rs
src/lsp/: language_server.rs  markdown.rs  position_encoding.rs  types.rs  uri.rs
src/platform/: aliases.rs  app_runner.rs  dialog.rs  file_watcher.rs  gfx.rs  process.rs  pty.rs  recycle.rs  result.rs  text.rs  text_cache.rs  window.rs
src/platform/macos/: app_runner.rs  delegate.rs  dialog.rs  file_watcher.rs  gfx.rs  keymaps.rs  mod.rs  process.rs  pty.rs  recycle.rs  result.rs  text.rs  view.rs  window.rs
src/platform/test/: app_runner.rs  dialog.rs  file_watcher.rs  gfx.rs  mod.rs  process.rs  pty.rs  recycle.rs  text.rs  window.rs
src/platform/windows/: app_runner.rs  deferred_call.rs  dialog.rs  file_watcher.rs  gfx.rs  keymaps.rs  mod.rs  process.rs  pty.rs  recycle.rs  result.rs  text.rs  window.rs
src/text/: action_history.rs  char_category.rs  compare.rs  cursor.rs  cursor_index.rs  doc.rs  grapheme.rs  grapheme_category.rs  line.rs  line_pool.rs  pattern.rs  selection.rs  syntax.rs  syntax_highlighter.rs  tests.rs  tokenizer.rs  trie.rs  utf32.rs
src/text/doc/: lsp.rs  tests.rs
src/ui/: camera.rs  color.rs  command_palette.rs  controller.rs  core.rs  doc_io.rs  doc_list.rs  editor.rs  editor_pane.rs  focus_list.rs  msg.rs  pane.rs  pane_list.rs  popup.rs  result_list.rs  slot_list.rs  status_bar.rs  tab.rs  terminal.rs  terminal_emulator.rs  terminal_pane.rs  widget.rs  widget_list.rs
src/ui/command_palette/: all_actions_mode.rs  all_diagnostics_mode.rs  all_files_mode.rs  file_explorer_mode.rs  file_mode.rs  find_file_mode.rs  find_in_files_mode.rs  go_to_line_mode.rs  incremental_results.rs  mode.rs  references.rs  references_mode.rs  rename_mode.rs  search_mode.rs
src/ui/editor/: completion_list.rs  completion_result.rs  cursor_history.rs  doc_io.rs  editor_pane.rs  examine_popup.rs  signature_help_popup.rs
src/ui/terminal/: char32.rs  color_table.rs  escape_parser.rs  escape_sequences.rs  terminal_emulator.rs  terminal_pane.rs
themes/: darktooth.toml  default_dark.toml  default_light.toml  gruvbox_dark.toml
todo_outdated_languages/: c.toml  html.toml  javascript.toml  rust.toml
