[package]
name = "keylime"
version = "0.1.0"
edition = "2021"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.basic-toml]
version = "0.1"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_Pipes",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Ole",
    "Win32_System_Com",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
]

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies.objc2-app-kit]
version = "0.2"
features = [
    "NSApplication",
    "NSRunningApplication",
    "NSResponder",
    "NSWindow",
    "NSGraphics",
    "NSColor",
    "NSEvent",
    "NSOpenPanel",
    "NSSavePanel",
    "NSPanel",
    "NSAlert",
    "NSControl",
    "NSButton",
]

[target.'cfg(target_os = "macos")'.dependencies.objc2-foundation]
version = "0.2"
features = ["NSDate", "NSThread"]

[target.'cfg(target_os = "macos")'.dependencies.objc2-metal]
version = "0.2"
features = [
    "MTLAccelerationStructureTypes",
    "MTLCommandQueue",
    "MTLCommandBuffer",
    "MTLCommandEncoder",
    "MTLRenderCommandEncoder",
    "MTLRenderPipeline",
    "MTLRenderPass",
    "MTLPixelFormat",
    "MTLDevice",
    "MTLLibrary",
    "MTLDrawable",
    "MTLBuffer",
    "MTLResource",
    "MTLStageInputOutputDescriptor",
    "MTLTexture",
    "MTLTypes",
]

[target.'cfg(target_os = "macos")'.dependencies.objc2-metal-kit]
version = "0.2"
features = ["MTKView", "objc2-app-kit", "objc2-quartz-core"]

[target.'cfg(target_os = "macos")'.dependencies.objc2-quartz-core]
version = "0.2"
features = ["objc2-metal"]

[target.'cfg(target_os = "macos")'.dependencies.objc2-core-text]
git = "https://github.com/madsmtm/objc2"
rev = "cd4944122aae85bf6556b1c6f88d782d24fd92b9"
features = [
    "CTFont",
    "CTFontDescriptor",
    "CTFrame",
    "CTFramesetter",
    "CTRunDelegate",
    "CTStringAttributes",
    "objc2-core-foundation",
    "objc2-core-graphics",
]

[target.'cfg(target_os = "macos")'.dependencies.objc2-core-foundation]
git = "https://github.com/madsmtm/objc2"
rev = "cd4944122aae85bf6556b1c6f88d782d24fd92b9"
features = ["CFString"]

[target.'cfg(target_os = "macos")'.dependencies.objc2-core-graphics]
git = "https://github.com/madsmtm/objc2"
rev = "cd4944122aae85bf6556b1c6f88d782d24fd92b9"
features = [
    "CGAffineTransform",
    "CGPath",
    "CGColorSpace",
    "CGContext",
    "CGBitmapContext",
]
