[package]
name = "keylime"
version = "0.1.0"
edition = "2021"

[features]
terminal_emulator_debug = []

[dependencies.unicode-width]
version = "0.2"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.basic-toml]
version = "0.1"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_Pipes",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Ole",
    "Win32_System_Com",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
]

[target.'cfg(target_os = "macos")'.dependencies.libc]
version = "0.2"

[target.'cfg(target_os = "macos")'.dependencies.objc2]
git = "https://github.com/madsmtm/objc2"
rev = "cd4944122aae85bf6556b1c6f88d782d24fd92b9"

[target.'cfg(target_os = "macos")'.dependencies.objc2-app-kit]
git = "https://github.com/madsmtm/objc2"
rev = "cd4944122aae85bf6556b1c6f88d782d24fd92b9"
features = [
    "NSApplication",
    "NSRunningApplication",
    "NSResponder",
    "NSWindow",
    "NSGraphics",
    "NSColor",
    "NSEvent",
    "NSOpenPanel",
    "NSSavePanel",
    "NSPanel",
    "NSAlert",
    "NSControl",
    "NSButton",
    "NSPasteboard",
    "NSView",
    "NSAppearance",
    "NSMenu",
    "NSMenuItem",
    "objc2-quartz-core",
    "objc2-core-foundation",
]

[target.'cfg(target_os = "macos")'.dependencies.objc2-foundation]
git = "https://github.com/madsmtm/objc2"
rev = "cd4944122aae85bf6556b1c6f88d782d24fd92b9"
features = [
    "NSDate",
    "NSThread",
    "NSRunLoop",
    "NSTimer",
    "objc2-core-foundation",
]

[target.'cfg(target_os = "macos")'.dependencies.objc2-metal]
git = "https://github.com/madsmtm/objc2"
rev = "cd4944122aae85bf6556b1c6f88d782d24fd92b9"
features = [
    "MTLAccelerationStructureTypes",
    "MTLCommandQueue",
    "MTLCommandBuffer",
    "MTLCommandEncoder",
    "MTLRenderCommandEncoder",
    "MTLRenderPipeline",
    "MTLRenderPass",
    "MTLPixelFormat",
    "MTLDevice",
    "MTLLibrary",
    "MTLDrawable",
    "MTLBuffer",
    "MTLResource",
    "MTLStageInputOutputDescriptor",
    "MTLTexture",
    "MTLTypes",
]

[target.'cfg(target_os = "macos")'.dependencies.objc2-quartz-core]
git = "https://github.com/madsmtm/objc2"
rev = "cd4944122aae85bf6556b1c6f88d782d24fd92b9"
features = ["CAMetalLayer", "CATransaction", "objc2-metal"]

[target.'cfg(target_os = "macos")'.dependencies.objc2-core-text]
git = "https://github.com/madsmtm/objc2"
rev = "cd4944122aae85bf6556b1c6f88d782d24fd92b9"
features = [
    "CTFont",
    "CTFontTraits",
    "CTFontDescriptor",
    "CTFrame",
    "CTFramesetter",
    "CTTypesetter",
    "CTLine",
    "CTRun",
    "CTRunDelegate",
    "CTStringAttributes",
    "objc2-core-foundation",
    "objc2-core-graphics",
]

[target.'cfg(target_os = "macos")'.dependencies.objc2-core-foundation]
git = "https://github.com/madsmtm/objc2"
rev = "cd4944122aae85bf6556b1c6f88d782d24fd92b9"

[target.'cfg(target_os = "macos")'.dependencies.objc2-core-graphics]
git = "https://github.com/madsmtm/objc2"
rev = "cd4944122aae85bf6556b1c6f88d782d24fd92b9"
features = [
    "CGAffineTransform",
    "CGPath",
    "CGColorSpace",
    "CGContext",
    "CGBitmapContext",
]
