[package]
name = "keylime"
version = "0.1.0"
edition = "2021"

[features]
terminal_emulator_debug = []
lsp_debug = []

[dependencies]
unicode-segmentation = "1.12"
basic-toml = "0.1"
serde_json = { version = "1.0", features = ["raw_value"] }
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-core = "0.61"
windows-numerics = "0.2"
windows = { version = "0.61", features = [
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Imaging",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_Pipes",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Ole",
    "Win32_System_Com",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSRunningApplication",
    "NSResponder",
    "NSWindow",
    "NSGraphics",
    "NSColor",
    "NSEvent",
    "NSOpenPanel",
    "NSSavePanel",
    "NSPanel",
    "NSAlert",
    "NSControl",
    "NSButton",
    "NSPasteboard",
    "NSView",
    "NSAppearance",
    "NSMenu",
    "NSMenuItem",
    "NSWorkspace",
    "block2",
    "objc2-quartz-core",
    "objc2-core-foundation",
] }
objc2-foundation = { version = "0.3", features = [
    "NSDate",
    "NSThread",
    "NSRunLoop",
    "NSTimer",
    "objc2-core-foundation",
] }
objc2-metal = { version = "0.3", features = [
    "MTLAccelerationStructureTypes",
    "MTLCommandQueue",
    "MTLCommandBuffer",
    "MTLCommandEncoder",
    "MTLRenderCommandEncoder",
    "MTLRenderPipeline",
    "MTLRenderPass",
    "MTLPixelFormat",
    "MTLDevice",
    "MTLLibrary",
    "MTLDrawable",
    "MTLBuffer",
    "MTLResource",
    "MTLStageInputOutputDescriptor",
    "MTLTexture",
    "MTLTypes",
] }
objc2-quartz-core = { version = "0.3", features = [
    "CAMetalLayer",
    "CATransaction",
    "objc2-metal",
] }
objc2-core-text = { version = "0.3", features = [
    "CTFont",
    "CTFontTraits",
    "CTFontDescriptor",
    "CTFrame",
    "CTFramesetter",
    "CTTypesetter",
    "CTLine",
    "CTRun",
    "CTRunDelegate",
    "CTStringAttributes",
    "objc2-core-graphics",
] }
objc2-core-graphics = { version = "0.3", features = [
    "CGAffineTransform",
    "CGPath",
    "CGColorSpace",
    "CGContext",
    "CGBitmapContext",
] }
objc2-core-foundation = "0.3"
